--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
 url: //hackingbits.github.io
-#url: http://localhost:4000
+url: http://localhost:4000
 
 # Owner/author information
 owner:
@@ -44,6 +44,7 @@ excerpt_separator: <!--more-->
 
 gems:
   - jekyll-sitemap
+  - jekyll_inline_highlight
 
 sass:
   sass_dir: _sass
