--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@ geyslan:
   web: http://geyslan.github.io
   email: geyslan@gmail.com
   bio: "Just a common guy who daily delivers bugs 🐛 and still want to be paid 💰 for that."
-  avatar: bio-photo-2.jpg
+  avatar: avatar.jpg
   github: geyslan
   linkedin: geyslan
   twitter: geyslangb
@@ -16,7 +16,7 @@ patito:
   name: Paulo Benatto
   email: benatto@gmail.com
   bio: "Brazilian compressed with LZO, trying to figure out the difference between bits and bytes."
-  avatar: bio-photo.jpg
+  avatar: avatar.jpg
   github: patito
   linkedin:
   twitter: pbenatto
@@ -25,9 +25,9 @@ patito:
 
 pedrofausto:
   name: Pedro Fausto Rodrigues
-  email: benatto@gmail.com
+  email: pedrofausto@gmail.com
   bio: "Hardware design, security and malware research enthusiast. Eager to spend his time on creating digital solutions to daily problems."
-  avatar: bio-photo.jpg
+  avatar: avatar.jpg
   github: pedrofausto
   linkedin: pedrofausto
   twitter: pedrofaustojr
