author plus fix

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -32,4 +32,4 @@ pedrofausto:
   linkedin: pedrofausto
   twitter: pedrofaustojr
   google:
-    plus: +PedroFaustoRodrigues
+    plus: PedroFaustoRodrigues
