--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ logo: #site-logo.pngj
 search: true
 comments: true
 url: //hackingbits.github.io
-url: http://localhost:4000
+#url: http://localhost:4000
 
 # Jekyll configuration
 
