better english joke

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,7 +4,7 @@ geyslan:
   name: Geyslan G. Bem
   web: http://geyslan.github.io
   email: geyslan@gmail.com
-  bio: "Just a common guy who daily delivers bugs and still want to be paid for that."
+  bio: "Just an ordinary guy who frequently introduces bugs and still want to be paid for that. Just kidding, sometimes there are free bugs too."
   avatar: bio-photo.jpg
   github: geyslan
   linkedin: geyslan
